<resources>
    <string name="app_name">Citiflo</string>

    <string name="title_onboarding_1">Send Anything, Anywhere </string>
    <string name="connects_clients">citiflo facilitates the connection between clients and customers seeking logistical services.</string>

    <string name="Hire_or_enlist">Hire or Enlist a Vehicle</string>
    <string name="Enhances_your_business">Citiflo enhances your business visibility, reaching new heights through targeted advertising your vehicles rent or hire</string>

    <string name="back">Back</string>
    <string name="GetStarted">Get started</string>
    <string name="alreadyHaveAcct">Already have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Username">Username</string>
    <string name="signup">SignUp</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="Message">Message</string>
    <string name="Account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nigeria_Displayed">Nigeria</string>
    <string name="small_amp_big_shipment"><![CDATA[Small & Big Shipment]]></string>
    <string name="i_am_trying_to_find">I am trying to find…</string>
    <string name="your_choice_of_logistics">Find your choice of Logistics or Register your vehicle for hire</string>
    <string name="what_are_your_plans_for_today">What are your plans for today?</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="groceries_food_and_small_items">Groceries, Food and Small Items</string>
    <string name="_4_3">4.3</string>
    <string name="grablogistics">GrabLogistics</string>
    <string name="same_day_delivery">Same Day Delivery</string>
    <string name="hiyacar_ltd">Hiyacar LTD</string>
    <string name="_4_1">4.1</string>
    <string name="hiring_services">Hiring Services</string>
    <string name="bus_amp_cooling_van"><![CDATA[Bus & Cooling Van]]></string>
    <string name="hello_david">Hello, David</string>
    <string name="inter_state_shipping">Inter-state Shipping</string>
    <string name="ibadan">Ibadan</string>
    <string name="trucks">Trucks</string>
    <string name="trending_services">Trending Services</string>
    <string name="see_all">SEE ALL</string>
    <string name="groceries_food">Groceries, Food and Small Items</string>
    <string name="gig_logistics">GIG Logistics</string>
    <string name="all_nigeria">All Nigeria</string>
    <string name="sample_state">Sample State</string>
    <string name="tyuivuyihbk">tyuivuyihbk</string>
    <string name="Bike">Bike</string>
    <string name="lagos">Lagos</string>
    <string name="Ojo">Ojo</string>
    <string name="_4_6">4.6</string>
    <string name="search_location">search location</string>
    <string name="the_local_government_where_the_vehicle_is_needed">The Local Government where the vehicle is needed</string>
    <string name="to_enjoy_access_to_several_logistics_connections">To enjoy access to several logistics connections,</string>
    <string name="Bus">Bus</string>
    <string name="Van">Van</string>

    <string-array name="Location">
        <item>Lagos State</item>
        <item>Abuja, FCT</item>
        <item>Ogun State</item>
        <item>PortHarcourt</item>
        <item>Edo State</item>
        <item>Enugu State</item>
    </string-array>

</resources>