<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/home_states"
        />
    <item
        android:id="@+id/cartFragment"
        android:title="@string/Message"
        app:showAsAction="ifRoom"
        android:iconTintMode="add"
        android:icon="@drawable/message_states"
        />

    <item
        android:id="@+id/favouriteFragment"
        android:title="@string/favourites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/save___states"
        />

    <item
        android:id="@+id/paymentFragment"
        android:title="@string/Account"
        app:showAsAction="ifRoom"
        android:icon="@drawable/account___states"
        />
</menu>