<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.VanActivity">


<LinearLayout
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_green_900"
    android:orientation="horizontal"
    android:paddingTop="35dp"
    android:paddingBottom="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_press"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@color/fui_transparent"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/Van"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.AppCompat.SearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        app:endIconTint="@color/white"
        app:endIconDrawable="@drawable/search"
        android:background="@drawable/search_bg">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:textSize="16sp"
            app:endIconTint="@color/white"
            app:iconifiedByDefault="false"
            android:hint="@string/search_location"
            app:queryHint ="Search Location" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/menu_dots"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:background="@color/fui_transparent"
        android:src="@drawable/more_vertical"
        app:tint="@color/white"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="4dp"
    app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:drawablePadding="6dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/the_local_government_where_the_vehicle_is_needed"
        android:textAlignment="textEnd"
        android:textColor="@color/md_grey_400"
        android:textSize="13sp"
        app:drawableEndCompat="@drawable/alert_circle"
        app:drawableTint="@color/teal_800"
        tools:ignore="RtlCompat" />



    <!--

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                app:iss_auto_cycle="true"
                app:iss_period="1000"
                app:iss_delay="1000"
                app:iss_text_align="CENTER"/>-->

</LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/van_Rv"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="4dp"
    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
    app:spanCount="2"
    tools:listitem="@layout/van_item_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>


